fix: adiciona math.type obrigatorio na Composition (Crossplane 2.x)

--- a/crossplane/managed-resources/composition-postgresql.yaml
+++ b/crossplane/managed-resources/composition-postgresql.yaml
@@ -54,6 +54,7 @@ spec:
             transforms:
               - type: math
                 math:
+                  type: Multiply
                   multiply: 1024
           - type: FromCompositeFieldPath
             fromFieldPath: spec.parameters.size
