fix: adiciona string.type Format obrigatorio no transform

--- a/crossplane/managed-resources/composition-postgresql.yaml
+++ b/crossplane/managed-resources/composition-postgresql.yaml
@@ -103,4 +103,5 @@ spec:
             transforms:
               - type: string
                 string:
+                  type: Format
                   fmt: "%s-allow-azure"
