fix: adiciona Secret para senha do PostgreSQL e referência na Composition

--- a/crossplane/managed-resources/composition-postgresql.yaml
+++ b/crossplane/managed-resources/composition-postgresql.yaml
@@ -33,6 +33,10 @@ spec:
                 matchLabels:
                   platform: labs
               administratorLogin: platformadmin
+              administratorLoginPasswordSecretRef:
+                name: postgresql-admin-password
+                namespace: crossplane-system
+                key: password
               skuName: B_Gen5_1
               storageMb: 20480
               version: "11"
