--- a/crossplane/managed-resources/resource-group.yaml
+++ b/crossplane/managed-resources/resource-group.yaml
@@ -2,6 +2,8 @@ apiVersion: azure.upbound.io/v1beta1
 kind: ResourceGroup
 metadata:
   name: platform-labs-crossplane
+  labels:
+    platform: labs
 spec:
   forProvider:
     location: East US
